--- a/assets/stylesheets/less/site.less
+++ b/assets/stylesheets/less/site.less
@@ -469,10 +469,7 @@ img {
         font-weight: bold;
         color: white;
         background: @second;
-        // display: inline-block;
-        // @media @mq-950 {
-        //     display: block;
-        // }
+        .shadow-lg;
         &:first-of-type {
             margin-right: 25px;
             @media @mq-950 {
@@ -494,10 +491,12 @@ img {
         margin-bottom: 20px;
         &::before {
             .fontawesome;
+            background-color: transparent;
             font-weight: bold;
             margin-right: 10px;
             color: @third;
             font-size: @font-4xl;
+            text-shadow: 1px 2px 2px rgba(0, 0, 0, 0.3);
         }
         &--check { &::before { content: '\f058'; } }
         &--coins { &::before { content: '\f51e'; } }
