--- a/assets/stylesheets/less/site.less
+++ b/assets/stylesheets/less/site.less
@@ -542,18 +542,25 @@ img {
 
 .roadmap {
     position: relative;
-    &__svgcontainer {
+    // &__svgcontainer {
+       
+    // }
+    &__svg {
         position: absolute;
+        // z-index: 2;
+        top: 0;
+        left: 0;
         width: 100%;
         height: 100%;
     }
-    &__svgel {
-        width: 100%;
-        height: 100%;
-    }
-    &__context {
-        position: relative;
-    }
+    // &__svgel {
+    //     width: 100%;
+    //     height: 100%;
+    //     position: absolute;
+    //     width: 100%;
+    //     height: 100%;
+    // }
+
 }
 
 .roadmap-el {
