road ready to go

--- a/assets/stylesheets/less/site.less
+++ b/assets/stylesheets/less/site.less
@@ -586,9 +586,9 @@ img {
 
     position: relative;
 
-    @media @mq-600 {
-        padding-right: 50px;
-    }
+    // @media @mq-600 {
+    //     padding-right: 50px;
+    // }
     
     &__step {
         position: absolute;
@@ -655,11 +655,11 @@ img {
         margin: 0 auto;
 
         @media @mq-950 {
-            margin-left: 0;
+            // margin-left: 0;
             margin-bottom: 25px;
         }
         @media @mq-600 {
-            max-width: 150px;
+            max-width: 250px;
         }
     }
     &__description {
