--- a/assets/stylesheets/less/site.less
+++ b/assets/stylesheets/less/site.less
@@ -11,7 +11,7 @@
 
 @import "normalize.css";
 @import "all.min.css";
-
+@import "jquery.qtip.min.css";
 
 
 @mq-1500: ~"only screen and (max-width: 1500px)";
